chore: increase build budget