@@ -2,6 +2,8 @@ package kg.almalab.meddocs.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -10,10 +12,13 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
     private final JwtAuthFilter jwtAuthFilter;
 
@@ -28,16 +33,30 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors().and()
-                .csrf().disable()
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Добавьте это!
-                .and()
+                // 1. CORS должен быть ПЕРВЫМ
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // 2. Отключаем CSRF
+                .csrf(AbstractHttpConfigurer::disable)
+
+                // 3. Настройка разрешений
                 .authorizeHttpRequests(auth -> auth
-                        .antMatchers("/auth/**").permitAll() // Вход и регистрация
-                        .antMatchers("/templates/**").hasAnyRole("USER", "ADMIN", "SUPERADMIN") // Доступ к шаблонам
-                        .antMatchers("/verify/**").permitAll()
+                        // Разрешаем OPTIONS для всех эндпоинтов (Критично для CORS)
+                        .requestMatchers(org.springframework.web.cors.CorsUtils::isPreFlightRequest).permitAll()
+                        // Разрешаем всё, что связано с авторизацией
+                        .requestMatchers("/api/public/**").permitAll()
+                        .requestMatchers("/auth/**").permitAll()
+                        // Разрешаем корень (чтобы не было 403, когда заходишь по ссылке)
+                        .requestMatchers("/").permitAll()
+                        .requestMatchers("/error").permitAll()
+                        // Остальное — под замок
                         .anyRequest().authenticated()
                 )
+
+                // 4. Stateless сессии
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 5. Твой фильтр
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -61,12 +80,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:4200"));
-        config.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // Разрешаем все твои домены
+        config.setAllowedOrigins(Arrays.asList(
+                "https://almalabfrontprod.vercel.app","https://tissue-story-illustrations-defined.trycloudflare.com"
+        ));
+
+        // Стандартные методы
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+        // Обязательно разрешаем заголовок Content-Type и Authorization
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "Origin", "ngrok-skip-browser-warning", "localto-skip-warning"));
+        // Разрешаем куки и заголовки авторизации
         config.setAllowCredentials(true);
 
+        // Кэшируем CORS ответ на час
+        config.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // Исправлено: просто передаем config, без лямбды здесь (в стандартном методе)
         source.registerCorsConfiguration("/**", config);
         return source;
     }
